data/derived/comb/progs/unify/prog4993.ml.out
Characters 91-110:
  | Sine(a) -> sin (pi * eval (a,x,y))
                   ^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
